--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apollo-server-koa": "^2.1.0",
     "graphql": "^14.0.2",
+    "koa-bodyparser": "^4.2.1",
     "koa-static": "^5.0.0",
     "mongoose": "^5.3.10"
   },
